--- a/templates/predict.html
+++ b/templates/predict.html
@@ -6,7 +6,7 @@
 
 <style type="text/css">
 body{
-background-color:#151728;
+background-color:#7395AE;
  background-size:10%;
  animation: bgScroll 20s linear infinite;
  color: white;
